* Added datepicker alignment * Fixed accordion styling issue

--- a/src/styles/tink/_cards.scss
+++ b/src/styles/tink/_cards.scss
@@ -13,7 +13,7 @@
   box-shadow: 0 1px 1px rgba(0,0,0,.05);
   margin-bottom: rem($line-height-computed);
 
-  &:not(.accordion-card) {
+  &:not(.accordion-panel) {
     border-radius: $card-border-radius;
   }
 
